refactor: change styles of mainpage

--- a/index.html
+++ b/index.html
@@ -9,8 +9,9 @@
     <title>QSP: Как сделать?</title>
 </head>
 <body>
-<div class="em_Main">
-    <div class="em_AROUND">
+<div class="avs-page-wrapper">
+    <div class="easy-lib-page">
+        <article class="e-block">
         <h1>Онлайн-справочник по самым часто задаваемым вопросам по QSP от Aleks Versus</h1>
         <div class="Monokai-Code" style="min-height:480px;white-space: normal;">
             <p>
@@ -115,14 +116,15 @@
                 </li>
             </ul>
         </div>
+        </article>
 
         
-        <div class="em_Epigraph">
-            <div class="em_subText">
-                <p>Aleks Versus'HowDo-F.A.Q.'2019-<span id="date_stamp_faq">2021</span></p>
-                <p>Aleks Versus'Game Adventure Making'Really Unimaginable Stories'2019-<span id="date_stamp_gamrus">2021</span></p>
+        <aside class="e-block">
+            <div class="avs-page-stamp">
+                <p class="empty">Aleks Versus'HowDo-F.A.Q.'2019-<span id="date_stamp_faq">2021</span></p>
+                <p class="empty">Aleks Versus'Game Adventure Making'Really Unimaginable Stories'2019-<span id="date_stamp_gamrus">2021</span></p>
             </div>
-        </div>
+        </aside>
     </div>
 </div>
 <script type="text/javascript" src="res/js/text_replace.js"></script>
