fix: add class to blockquote-blocks

--- a/informarch/aeroqsp_uchebnik_0028.html
+++ b/informarch/aeroqsp_uchebnik_0028.html
@@ -15,7 +15,7 @@
             <h1 class="avs-article-h1">ИнформАрхив QSP</h1>
             <!-- body start -->
 <div class="avs-pages-button__wrapper"><div class="avs-pages-button__left-combine"><div class="avs-pages-button"><a href="https://aleksversus.github.io/howdo_faq/informarch/standalone_aeroqsp_0027.html" class="avs-pages-button__link">&lt; Назад, к странице 41</a></div></div><div class="avs-pages-button__right-combine"><div class="avs-pages-button"><a href="https://aleksversus.github.io/howdo_faq/informarch/ne_rabotaet_atribut_v_aeroqsp_0044.html" class="avs-pages-button__link">Вперёд, к странице 43 &gt;</a></div></div></div>
-<h6 id="informarch_aeroqspguide" class="avs-article-h6">Учебник по AeroQSP и QGen</h6><blockquote>
+<h6 id="informarch_aeroqspguide" class="avs-article-h6">Учебник по AeroQSP и QGen</h6><blockquote class="avs-article-blockquote">
 <p>
 Примечание Aleks Versus: это статья об устаревшем плеере AeroQSP; данный плеер больше не работает в связи с прекращением поддержки и распространения Adobe Flash Player; статья представлена для ознакомительных целей, так как в ней достаточно полно отражены основные принципы написания игр на QSP.</p>
 </blockquote>
