--- a/pages/est__li_fajl_0120.html
+++ b/pages/est__li_fajl_0120.html
@@ -61,7 +61,7 @@
 <p>
 Так же вы можете организовать генерацию модуля со списком файлов в указанной папке. Вот метод, предложенный `evp`:
 </p>
-<blockquote>
+<blockquote class="avs-article-blockquote">
 <p>
 	Некий исполняемый файл (это может быть даже bat-файл):
 </p>
