--- a/pages/kak_sozdavat__dejstvija_cherez_tsikl_0073.html
+++ b/pages/kak_sozdavat__dejstvija_cherez_tsikl_0073.html
@@ -67,7 +67,7 @@ i<span class="Monokai-Operator">=</span><span class="Monokai-Numeric">2</span><b
 <p>
 В конце цикла значение переменной `i` будет равно 6, тогда как цикл создаст нам пять действий с названиями:
 </p>
-<blockquote>
+<blockquote class="avs-article-blockquote">
 <p>
 Действие номер 1</p>
 <p>
