--- a/pages/komanda_dlja_vyhoda_iz_igry_0043.html
+++ b/pages/komanda_dlja_vyhoda_iz_igry_0043.html
@@ -26,7 +26,7 @@
 <p>
 Этот вопрос задавался настолько часто, что его отметили в справке:
 </p>
-<blockquote>
+<blockquote class="avs-article-blockquote">
 <p>
 `В:` Как сделать действие выхода из игры? Т.е. нажал "Выход" и приложение закрылось?</p>
 <p>
