--- a/pages/ne_rabotaet_iif_0077.html
+++ b/pages/ne_rabotaet_iif_0077.html
@@ -35,7 +35,7 @@
 <p>
 Внимательно читайте справку, прежде чем использовать какую-либо функцию или оператор:
 </p>
-<blockquote>
+<blockquote class="avs-article-blockquote">
 <p>
 IIF([#выражение],[выражение_да],[выражение_нет]) - ВОЗВРАЩАЕТ ЗНАЧЕНИЕ выражения [выражение_да], если [#выражение] верно, иначе значение выражения [выражение_нет].</p>
 </blockquote>
