--- a/pages/ne_rabotajut_drobnye_chisla_0087.html
+++ b/pages/ne_rabotajut_drobnye_chisla_0087.html
@@ -23,7 +23,7 @@
 <p>
 Да, всё верно. Об этом написано в справке:
 </p>
-<blockquote>
+<blockquote class="avs-article-blockquote">
 <p>
 QSP не поддерживает дробные числа, можно использовать только целые.</p>
 </blockquote>
