--- a/pages/refint_0052.html
+++ b/pages/refint_0052.html
@@ -23,14 +23,14 @@
 <p>
 О том, для чего нужен оператор `REFINT`, и как он работает, прямо написано в справке:
 </p>
-<blockquote>
+<blockquote class="avs-article-blockquote">
 <p>
 `REFINT` — обновление интерфейса (а также смена цветов, шрифта, назначенных с помощью системных переменных `BCOLOR`, `FCOLOR`, `LCOLOR`, `FSIZE`, `$FNAME`).</p>
 </blockquote>
 <p>
 И ещё:
 </p>
-<blockquote>
+<blockquote class="avs-article-blockquote">
 <p>
 Обновление настроек интерфейса происходит 2 раза в секунду (автоматически, по умолчанию), либо с помощью оператора `REFINT`. Также см. оператор `SETTIMER`.</p>
 </blockquote>
@@ -40,7 +40,7 @@
 <p>
 Есть ещё комментарий от разработчика:
 </p>
-<blockquote>
+<blockquote class="avs-article-blockquote">
 <p>
 `REFINT` принудительно выводит на экран текст, который находится в буфере вывода</p>
 </blockquote>
