--- a/informarch/aeroqsp_help_0026.html
+++ b/informarch/aeroqsp_help_0026.html
@@ -462,7 +462,7 @@ AeroQSP поддерживает встраивание шрифтов в игр
 <p>
 PS: По умолчанию размер экрана игры <code>800x600</code> пикселей.
 </p>
-<h6 id="primechanie-aleks-versus" class="avs-article-h6">Примечание Aleks Versus:</h6><blockquote>
+<h6 id="primechanie-aleks-versus" class="avs-article-h6">Примечание Aleks Versus:</h6><blockquote class="avs-article-blockquote">
 <p>
 AeroQSP — плеер, работающий на устаревшей и отжившей своё технологии Flash. Adobe прекратила поддержку данной технологии, что означает, что AeroQSP стало невозможно использовать. Игры AeroQSP можно пробовать запустить на <a href="https://aleksversus.github.io/howdo_faq/articles/qspider_0004#qspider_0120" style="text-decoration:none;" class="avs-page-external-link">qSpider</a>, но это так же потребует танцев с бубнами. Лучше писать игры сразу для qSpider, не уповая на то, что он поддерживает AeroQSP.</p>
 </blockquote>
