--- a/informarch/lokalizatsija_qsp_0005.html
+++ b/informarch/lokalizatsija_qsp_0005.html
@@ -15,7 +15,7 @@
             <h1 class="avs-article-h1">ИнформАрхив QSP</h1>
             <!-- body start -->
 <div class="avs-pages-button__wrapper"><div class="avs-pages-button__left-combine"><div class="avs-pages-button"><a href="https://aleksversus.github.io/howdo_faq/informarch/uchebnik_po_qsp_dlja_redaktora_qgen_0004.html" class="avs-pages-button__link">&lt; Назад, к странице 5</a></div></div><div class="avs-pages-button__right-combine"><div class="avs-pages-button"><a href="https://aleksversus.github.io/howdo_faq/informarch/analizator_koda_qsp_0006.html" class="avs-pages-button__link">Вперёд, к странице 7 &gt;</a></div></div></div>
-<h5 id="informarch_localization" class="avs-article-h5">Локализация классического плеера QSP версии 5.7.0</h5><blockquote>
+<h5 id="informarch_localization" class="avs-article-h5">Локализация классического плеера QSP версии 5.7.0</h5><blockquote class="avs-article-blockquote">
 <p>
 Пишу на QSP полуигровой дипломный проект. Всё круто. Но научрука смущают пункты меню плеера вроде "квест", "игра". Понимаю, что можно поменять названия пунктов в файле языка "*.mo", но не понимаю как. По сему вопрос - Существуют ли способы создания своих файлов языка для интерфейса плеера? И если это как-то очевидно и я просмотрел, то заранее извиняюсь smile</p>
 </blockquote>
