feat: add pages: start, help_qsp

--- a/[source]/98_wiki_to_chm/to_compile/start.htm
+++ b/[source]/98_wiki_to_chm/to_compile/start.htm
@@ -16,7 +16,12 @@
     <div class="pad group">
       <div class="page group" style="min-height: 1037px;">
         
-        <h1 class="sectionedit1" id="spravochnaja_informacija_o_platforme_quest_soft_player">Справочная информация о платформе Quest Soft Player</h1>
+        <h1 class="sectionedit1" id="spravochnaja_informacija_o_platforme_quest_soft_player">Справочная информация о платформе Quest Soft Player</h1><table class="page-buttons">
+            <tr><td class="left-button"></td>
+            <td class="right-button">
+            <a href="help_qsp.htm" class="page-buttons__item" title="help:qsp">Вперёд: Что такое QSP?</a>
+            </td>
+          </table>
         <div class="level1">
           <p>
             Данный цикл статей - новая версия справки по QSP. Здесь будет собрано всё необходимое для освоения платформы.
