--- a/informarch/game_time_0015.html
+++ b/informarch/game_time_0015.html
@@ -15,7 +15,11 @@
             <h1 class="avs-article-h1">ИнформАрхив QSP</h1>
             <!-- body start -->
 <div class="avs-pages-button__wrapper"><div class="avs-pages-button__left-combine"><div class="avs-pages-button"><a href="https://aleksversus.github.io/howdo_faq/informarch/kalendar__po_metodu_schiota_julianskih_dnej_0014.html" class="avs-pages-button__link">&lt; Назад, к странице 16</a></div></div><div class="avs-pages-button__right-combine"><div class="avs-pages-button"><a href="https://aleksversus.github.io/howdo_faq/informarch/gibkij_plejlist_0016.html" class="avs-pages-button__link">Вперёд, к странице 18 &gt;</a></div></div></div>
-<h5 id="informarch_gametime" class="avs-article-h5">Игровое время [1.0]</h5><p class="avs-article-p">
+<h5 id="informarch_gametime" class="avs-article-h5">Игровое время [1.0]</h5><blockquote class="avs-article-blockquote">
+<p class="avs-article-p">
+Эта статья устарела.</p>
+</blockquote>
+<p class="avs-article-p">
 Иногда автору нужен учет игрового времени - например, чтобы поставить срок игроку на выполнение какого-либо задания.
 </p>
 <p class="avs-article-p">
