--- a/informarch/gibkij_plejlist_0016.html
+++ b/informarch/gibkij_plejlist_0016.html
@@ -15,7 +15,11 @@
             <h1 class="avs-article-h1">ИнформАрхив QSP</h1>
             <!-- body start -->
 <div class="avs-pages-button__wrapper"><div class="avs-pages-button__left-combine"><div class="avs-pages-button"><a href="https://aleksversus.github.io/howdo_faq/informarch/game_time_0015.html" class="avs-pages-button__link">&lt; Назад, к странице 17</a></div></div><div class="avs-pages-button__right-combine"><div class="avs-pages-button"><a href="https://aleksversus.github.io/howdo_faq/informarch/ispol_zovanie_massivov_0017.html" class="avs-pages-button__link">Вперёд, к странице 19 &gt;</a></div></div></div>
-<h5 id="informarch_flexible_playlist" class="avs-article-h5">Гибкий плейлист 1.0</h5><p class="avs-article-p">
+<h5 id="informarch_flexible_playlist" class="avs-article-h5">Гибкий плейлист 1.0</h5><blockquote class="avs-article-blockquote">
+<p class="avs-article-p">
+Модуль разрабатывался для плееров версии ниже 5.8.0.</p>
+</blockquote>
+<p class="avs-article-p">
 Код гибкого плейлиста для воспроизведения фоновой музыки.
 </p>
 <p class="avs-article-p">
@@ -46,7 +50,7 @@ $music_theme&nbsp;<span class="Monokai-Operator">=</span>&nbsp;<span class="Mono
 </li>
 </ol>
 <p class="avs-article-p">
-Переменная <code>music_on</code> отвечает за включение/выключение плейлиста. Выключить плейлист можно также с помощью <code>$music_theme = </code>''.
+Переменная <code>music_on</code> отвечает за включение/выключение плейлиста. Выключить плейлист можно также с помощью <code>$music_theme = ""</code>.
 </p>
 <p class="avs-article-p">
 С помощью переменной <code>volume</code> изменяется громкость проигрывания.
