--- a/informarch/instruktsija_po_smene_oformlenija_iz_koda_igry_0042.html
+++ b/informarch/instruktsija_po_smene_oformlenija_iz_koda_igry_0042.html
@@ -15,7 +15,11 @@
             <h1 class="avs-article-h1">ИнформАрхив QSP</h1>
             <!-- body start -->
 <div class="avs-pages-button__wrapper"><div class="avs-pages-button__left-combine"><div class="avs-pages-button"><a href="https://aleksversus.github.io/howdo_faq/informarch/vypolnenie_js_iz_qsp-koda_0041.html" class="avs-pages-button__link">&lt; Назад, к странице 34</a></div></div><div class="avs-pages-button__right-combine"><div class="avs-pages-button"><a href="https://aleksversus.github.io/howdo_faq/informarch/modal_window_0043.html" class="avs-pages-button__link">Вперёд, к странице 36 &gt;</a></div></div></div>
-<h6 id="faq_22_11" class="avs-article-h6">22.11. Инструкция от Nex'а, позволяющая сменить оформление из кода игры</h6><p class="avs-article-p">
+<h6 id="faq_22_11" class="avs-article-h6">22.11. Инструкция от Nex'а, позволяющая сменить оформление из кода игры</h6><blockquote class="avs-article-blockquote">
+<p class="avs-article-p">
+Эта статья устарела. Новый плеер с поддержкой HTML - <a href="https://aleksversus.github.io/howdo_faq/articles/qspider_0004.html" style="text-decoration:none;" class="avs-page-external-link">qSpider</a></p>
+</blockquote>
+<p class="avs-article-p">
 $BACKIMAGE в Навигаторе отключен, как и другие переменные оформления. Всё оформление в Навигаторе делается через HTML, CSS и Javascript.
 </p>
 <p class="avs-article-p">
