--- a/informarch/kak_podkljuchit__svoj_shrift_0033.html
+++ b/informarch/kak_podkljuchit__svoj_shrift_0033.html
@@ -15,7 +15,11 @@
             <h1 class="avs-article-h1">ИнформАрхив QSP</h1>
             <!-- body start -->
 <div class="avs-pages-button__wrapper"><div class="avs-pages-button__left-combine"><div class="avs-pages-button"><a href="https://aleksversus.github.io/howdo_faq/informarch/shablony_oformlenija_dlja_igr_0032.html" class="avs-pages-button__link">&lt; Назад, к странице 25</a></div></div><div class="avs-pages-button__right-combine"><div class="avs-pages-button"><a href="https://aleksversus.github.io/howdo_faq/informarch/kak_izmenit__tsvet_fona_0034.html" class="avs-pages-button__link">Вперёд, к странице 27 &gt;</a></div></div></div>
-<h5 id="faq_22_02" class="avs-article-h5">22.2. Как подключить свой шрифт к игре?</h5><p class="avs-article-p">
+<h5 id="faq_22_02" class="avs-article-h5">22.2. Как подключить свой шрифт к игре?</h5><blockquote class="avs-article-blockquote">
+<p class="avs-article-p">
+Эта статья устарела. Новый плеер с поддержкой HTML - <a href="https://aleksversus.github.io/howdo_faq/articles/qspider_0004.html" style="text-decoration:none;" class="avs-page-external-link">qSpider</a></p>
+</blockquote>
+<p class="avs-article-p">
 В: Как подключить свой шрифт к игре?
 </p>
 <p class="avs-article-p">
