--- a/informarch/plavnoe_izmenenie_0020.html
+++ b/informarch/plavnoe_izmenenie_0020.html
@@ -15,7 +15,11 @@
             <h1 class="avs-article-h1">ИнформАрхив QSP</h1>
             <!-- body start -->
 <div class="avs-pages-button__wrapper"><div class="avs-pages-button__left-combine"><div class="avs-pages-button"><a href="https://aleksversus.github.io/howdo_faq/informarch/dejstvie_po_usloviju_0019.html" class="avs-pages-button__link">&lt; Назад, к странице 21</a></div></div><div class="avs-pages-button__right-combine"><div class="avs-pages-button"><a href="https://aleksversus.github.io/howdo_faq/informarch/otladchik_0021.html" class="avs-pages-button__link">Вперёд, к странице 23 &gt;</a></div></div></div>
-<h5 id="informarch_transformation" class="avs-article-h5">Плавное изменение цвета фона [1.0]</h5><p class="avs-article-p">
+<h5 id="informarch_transformation" class="avs-article-h5">Плавное изменение цвета фона [1.0]</h5><blockquote class="avs-article-blockquote">
+<p class="avs-article-p">
+Это устаревшая статья!</p>
+</blockquote>
+<p class="avs-article-p">
 Плавное изменение цвета фона может придать Вашей игре больше атмосферности. Так же, это снизит напряжение на глаза при смене цвета фона (по сравнению с резким).
 </p>
 <p class="avs-article-p">
