--- a/informarch/rabota_v_tekstovom_redaktore_0011.html
+++ b/informarch/rabota_v_tekstovom_redaktore_0011.html
@@ -174,7 +174,7 @@
 -</span><br/>
 </div>
 <p class="avs-article-p">
-Для того, чтобы в тексте локации вывести значение переменной используется конструкция <code>'&lt;&lt;Имя_переменной&gt;&gt;</code>'. Обратите внимание в каждой локации выводится количество монет у игрока. К тому же, в локации «Порт» показывается количество ящиков, которое нужно перенести, чтобы получить деньги.
+Для того, чтобы в тексте локации вывести значение переменной используется конструкция <code>"&lt;&lt;Имя_переменной&gt;&gt;"</code>. Обратите внимание в каждой локации выводится количество монет у игрока. К тому же, в локации «Порт» показывается количество ящиков, которое нужно перенести, чтобы получить деньги.
 </p>
 <p class="avs-article-p">
 Ветвления в QSP задаются командой <code>IF</code>, после которой идёт условие и ставится двоеточие. Затем идут инструкции, которые выполняются, если условие верное и ставится завершающая команда <code>END</code>.
@@ -357,7 +357,7 @@
 -</span><br/>
 </div>
 <p class="avs-article-p">
-Конструкция <code>IF OBJ 'имя_предмета</code>' проверяет, есть ли у игрока в инвентаре указанный предмет. В нашем случае мы проверяем наличие тех предметов, которые мы можем купить в магазине. И если у игрока есть такие предметы - создаём действие «дарения» этих предметов. Когда игрок совершит действие, мы заберем у него тот предмет, который он хочет подарить и выводим диалог благодарности за подарок. К тому же, мы используем команду <code>DELACT</code>, которой удаляем действие, указанное после этой команды.
+Конструкция <code>IF OBJ "имя_предмета"</code> проверяет, есть ли у игрока в инвентаре указанный предмет. В нашем случае мы проверяем наличие тех предметов, которые мы можем купить в магазине. И если у игрока есть такие предметы - создаём действие «дарения» этих предметов. Когда игрок совершит действие, мы заберем у него тот предмет, который он хочет подарить и выводим диалог благодарности за подарок. К тому же, мы используем команду <code>DELACT</code>, которой удаляем действие, указанное после этой команды.
 </p>
 <h5 id="urok-4-nastrojki-formatirovanie" class="avs-article-h5">Урок 4. Настройки, Форматирование</h5><p class="avs-article-p">
 В этом уроке рассмотрим, как сделать наш квест более привлекательным. В первую очередь следует настроить интерфейс так, чтобы в нём не оставалось ничего лишнего, отвлекающего от игры. Если вы сейчас запустите наш пример, то увидите, что мы не используем "поле дополнительного описания" (справа внизу) и "командную строку" (внизу). Чтобы они нам не мешали, их нужно отключить. Делается это следующим образом:
