--- a/informarch/razmer_okna_igry_0040.html
+++ b/informarch/razmer_okna_igry_0040.html
@@ -15,7 +15,11 @@
             <h1 class="avs-article-h1">ИнформАрхив QSP</h1>
             <!-- body start -->
 <div class="avs-pages-button__wrapper"><div class="avs-pages-button__left-combine"><div class="avs-pages-button"><a href="https://aleksversus.github.io/howdo_faq/informarch/standalone_0039.html" class="avs-pages-button__link">&lt; Назад, к странице 32</a></div></div><div class="avs-pages-button__right-combine"><div class="avs-pages-button"><a href="https://aleksversus.github.io/howdo_faq/informarch/vypolnenie_js_iz_qsp-koda_0041.html" class="avs-pages-button__link">Вперёд, к странице 34 &gt;</a></div></div></div>
-<h6 id="faq_22_09" class="avs-article-h6">22.9. Где в Quest Navigator править размер окна с игрой?</h6><p class="avs-article-p">
+<h6 id="faq_22_09" class="avs-article-h6">22.9. Где в Quest Navigator править размер окна с игрой?</h6><blockquote class="avs-article-blockquote">
+<p class="avs-article-p">
+Эта статья устарела. Новый плеер с поддержкой HTML - <a href="https://aleksversus.github.io/howdo_faq/articles/qspider_0004.html" style="text-decoration:none;" class="avs-page-external-link">qSpider</a></p>
+</blockquote>
+<p class="avs-article-p">
 В: Где в Quest Navigator править размер окна с игрой? Например мне надо, чтобы игра изначально открывалась в разрешении 1280х720.
 </p>
 <p class="avs-article-p">
