--- a/informarch/soderzhanie_0000.html
+++ b/informarch/soderzhanie_0000.html
@@ -15,7 +15,11 @@
             <h1 class="avs-article-h1">ИнформАрхив QSP</h1>
             <!-- body start -->
 <div class="avs-pages-button__wrapper"><div class="empty">&nbsp;</div><div class="avs-pages-button__right-combine"><div class="avs-pages-button"><a href="https://aleksversus.github.io/howdo_faq/informarch/faq_po_qsp_0001.html" class="avs-pages-button__link">Вперёд, к странице 2 &gt;</a></div></div></div>
-<h3 id="informarch_soderzhanije" class="avs-article-h3">Содержание</h3><h4 id="bol_shoj-sbornik-poleznyh-ssylok-i-zakladok" class="avs-article-h4">Большой сборник полезных ссылок и закладок</h4><ul>
+<h3 id="informarch_soderzhanije" class="avs-article-h3">Содержание</h3><blockquote class="avs-article-blockquote">
+<p class="avs-article-p">
+<strong>Внимание!!!</strong> Это архив устаревших статей, необходимо помнить об этом, когда будете его читать. Не стоит бездумно копировать код, а потом удивляться, что у вас что-то не работает. Некоторые статьи были актуализированы для плееров версии 5.8.0, некоторые хранятся в неизменном виде, как они публиковались на qsp.org. Будьте бдительны.</p>
+</blockquote>
+<h4 id="bol_shoj-sbornik-poleznyh-ssylok-i-zakladok" class="avs-article-h4">Большой сборник полезных ссылок и закладок</h4><ul>
 <li><a href="https://aleksversus.github.io/howdo_faq/informarch/zakladki_0030.html#informarch_bookmarks" style="text-decoration:none;" class="avs-page-external-link">Сборник ссылок и закладок по QSP</a></li>
 </ul>
 <h4 id="chto-takoe-qsp" class="avs-article-h4">Что такое QSP</h4><ul>
