--- a/informarch/tjanem_karty_iz_kollody_0022.html
+++ b/informarch/tjanem_karty_iz_kollody_0022.html
@@ -15,7 +15,11 @@
             <h1 class="avs-article-h1">ИнформАрхив QSP</h1>
             <!-- body start -->
 <div class="avs-pages-button__wrapper"><div class="avs-pages-button__left-combine"><div class="avs-pages-button"><a href="https://aleksversus.github.io/howdo_faq/informarch/otladchik_0021.html" class="avs-pages-button__link">&lt; Назад, к странице 23</a></div></div><div class="avs-pages-button__right-combine"><div class="avs-pages-button"><a href="https://aleksversus.github.io/howdo_faq/informarch/shablony_oformlenija_dlja_igr_0032.html" class="avs-pages-button__link">Вперёд, к странице 25 &gt;</a></div></div></div>
-<h5 id="informarch_randomizer" class="avs-article-h5">Выбор случайных вариантов - тянем карты из колоды [1.0]</h5><p class="avs-article-p">
+<h5 id="informarch_randomizer" class="avs-article-h5">Выбор случайных вариантов - тянем карты из колоды [1.0]</h5><blockquote class="avs-article-blockquote">
+<p class="avs-article-p">
+Эта статья устарела. Похожая статья в справочнике: <a href="https://aleksversus.github.io/howdo_faq/pages/tjanem_kartu_iz_kolody_0141.html" style="text-decoration:none;" class="avs-page-external-link">тянем карту из колоды</a> </p>
+</blockquote>
+<p class="avs-article-p">
 Если требуется выбрать случайный вариант однократно, то используется оператор RAND. Но если стоит задача сделать последовательный выбор случайных вариантов из заранее сформированного массива значений, то одним только RAND не обойтись. При каждом последующем выборе нужно будет "помнить", какие значения были уже выбраны.
 </p>
 <p class="avs-article-p">
