--- a/informarch/kak_izmenit__tsvet_fona_0034.html
+++ b/informarch/kak_izmenit__tsvet_fona_0034.html
@@ -15,7 +15,11 @@
             <h1 class="avs-article-h1">ИнформАрхив QSP</h1>
             <!-- body start -->
 <div class="avs-pages-button__wrapper"><div class="avs-pages-button__left-combine"><div class="avs-pages-button"><a href="https://aleksversus.github.io/howdo_faq/informarch/kak_podkljuchit__svoj_shrift_0033.html" class="avs-pages-button__link">&lt; Назад, к странице 26</a></div></div><div class="avs-pages-button__right-combine"><div class="avs-pages-button"><a href="https://aleksversus.github.io/howdo_faq/informarch/izmenit__kursor_0035.html" class="avs-pages-button__link">Вперёд, к странице 28 &gt;</a></div></div></div>
-<h5 id="faq_22_03" class="avs-article-h5">22.3. Пишу <code>bcolor=rgb(255,200,200)</code>, но это не меняет цвет фона игры. Как изменить цвет фона из кода QSP?</h5><p class="avs-article-p">
+<h5 id="faq_22_03" class="avs-article-h5">22.3. Пишу <code>bcolor=rgb(255,200,200)</code>, но это не меняет цвет фона игры. Как изменить цвет фона из кода QSP?</h5><blockquote class="avs-article-blockquote">
+<p class="avs-article-p">
+Эта статья устарела. Новый плеер с поддержкой HTML - <a href="https://aleksversus.github.io/howdo_faq/articles/qspider_0004.html" style="text-decoration:none;" class="avs-page-external-link">qSpider</a></p>
+</blockquote>
+<p class="avs-article-p">
 В: Пишу <code>bcolor=rgb(255,200,200)</code>, но это не меняет цвет фона игры. Как изменить цвет фона из кода QSP?
 </p>
 <p class="avs-article-p">
