--- a/informarch/modal_window_0043.html
+++ b/informarch/modal_window_0043.html
@@ -15,7 +15,11 @@
             <h1 class="avs-article-h1">ИнформАрхив QSP</h1>
             <!-- body start -->
 <div class="avs-pages-button__wrapper"><div class="avs-pages-button__left-combine"><div class="avs-pages-button"><a href="https://aleksversus.github.io/howdo_faq/informarch/instruktsija_po_smene_oformlenija_iz_koda_igry_0042.html" class="avs-pages-button__link">&lt; Назад, к странице 35</a></div></div><div class="avs-pages-button__right-combine"><div class="avs-pages-button"><a href="https://aleksversus.github.io/howdo_faq/informarch/obnovlenie_do_5.7.0_0023.html" class="avs-pages-button__link">Вперёд, к странице 37 &gt;</a></div></div></div>
-<h6 id="faq_22_11" class="avs-article-h6">22.11. Модальное окошко с вариантами выбора</h6><p class="avs-article-p">
+<h6 id="faq_22_11" class="avs-article-h6">22.11. Модальное окошко с вариантами выбора</h6><blockquote class="avs-article-blockquote">
+<p class="avs-article-p">
+Эта статья устарела. Новый плеер с поддержкой HTML - <a href="https://aleksversus.github.io/howdo_faq/articles/qspider_0004.html" style="text-decoration:none;" class="avs-page-external-link">qSpider</a></p>
+</blockquote>
+<p class="avs-article-p">
 В Quest Navigator Вы можете самостоятельно написать такое окошко, даже не прибегая к помощи JavaScript.
 </p>
 <p class="avs-article-p">
