--- a/informarch/nastrojka_shablona_0036.html
+++ b/informarch/nastrojka_shablona_0036.html
@@ -15,7 +15,11 @@
             <h1 class="avs-article-h1">ИнформАрхив QSP</h1>
             <!-- body start -->
 <div class="avs-pages-button__wrapper"><div class="avs-pages-button__left-combine"><div class="avs-pages-button"><a href="https://aleksversus.github.io/howdo_faq/informarch/izmenit__kursor_0035.html" class="avs-pages-button__link">&lt; Назад, к странице 28</a></div></div><div class="avs-pages-button__right-combine"><div class="avs-pages-button"><a href="https://aleksversus.github.io/howdo_faq/informarch/proverka_pleera_0037.html" class="avs-pages-button__link">Вперёд, к странице 30 &gt;</a></div></div></div>
-<h5 id="faq_22_05" class="avs-article-h5">22.5. Скопировал шаблон оформления в папку со своей игрой, но что с ним теперь делать?</h5><p class="avs-article-p">
+<h5 id="faq_22_05" class="avs-article-h5">22.5. Скопировал шаблон оформления в папку со своей игрой, но что с ним теперь делать?</h5><blockquote class="avs-article-blockquote">
+<p class="avs-article-p">
+Эта статья устарела. Новый плеер с поддержкой HTML - <a href="https://aleksversus.github.io/howdo_faq/articles/qspider_0004.html" style="text-decoration:none;" class="avs-page-external-link">qSpider</a></p>
+</blockquote>
+<p class="avs-article-p">
 В: Скопировал шаблон оформления в папку со своей игрой, но что с ним теперь делать? Не пойму, что за что отвечает.
 </p>
 <p class="avs-article-p">
