--- a/informarch/ne_rabotaet_giperssylka_v_aeroqsp_0045.html
+++ b/informarch/ne_rabotaet_giperssylka_v_aeroqsp_0045.html
@@ -15,7 +15,11 @@
             <h1 class="avs-article-h1">ИнформАрхив QSP</h1>
             <!-- body start -->
 <div class="avs-pages-button__wrapper"><div class="avs-pages-button__left-combine"><div class="avs-pages-button"><a href="https://aleksversus.github.io/howdo_faq/informarch/ne_rabotaet_atribut_v_aeroqsp_0044.html" class="avs-pages-button__link">&lt; Назад, к странице 43</a></div></div><div class="avs-pages-button__right-combine"><div class="avs-pages-button"><a href="https://aleksversus.github.io/howdo_faq/informarch/obzory_qsp-compo_2010_0029.html" class="avs-pages-button__link">Вперёд, к странице 45 &gt;</a></div></div></div>
-<h6 id="faq_13_07" class="avs-article-h6">13.7. Не работает гиперссылка в AeroQSP</h6><p class="avs-article-p">
+<h6 id="faq_13_07" class="avs-article-h6">13.7. Не работает гиперссылка в AeroQSP</h6><blockquote class="avs-article-blockquote">
+<p class="avs-article-p">
+Примечание Aleks Versus: это статья об устаревшем плеере AeroQSP; данный плеер больше не работает в связи с прекращением поддержки и распространения Adobe Flash Player; статья представлена для ознакомительных целей, так как в ней достаточно полно отражены основные принципы написания игр на QSP.</p>
+</blockquote>
+<p class="avs-article-p">
 В: Не работает гиперссылка в AeroQSP.
 </p>
 <p class="avs-article-p">
