--- a/informarch/obnovlenie_do_5.7.0_0023.html
+++ b/informarch/obnovlenie_do_5.7.0_0023.html
@@ -15,7 +15,11 @@
             <h1 class="avs-article-h1">ИнформАрхив QSP</h1>
             <!-- body start -->
 <div class="avs-pages-button__wrapper"><div class="avs-pages-button__left-combine"><div class="avs-pages-button"><a href="https://aleksversus.github.io/howdo_faq/informarch/modal_window_0043.html" class="avs-pages-button__link">&lt; Назад, к странице 36</a></div></div><div class="avs-pages-button__right-combine"><div class="avs-pages-button"><a href="https://aleksversus.github.io/howdo_faq/informarch/aeroqsp_0024.html" class="avs-pages-button__link">Вперёд, к странице 38 &gt;</a></div></div></div>
-<h6 id="informarch_update570" class="avs-article-h6">Обновление QSP (5.7.0) и QGen (4.0.0b)</h6><p class="avs-article-p">
+<h6 id="informarch_update570" class="avs-article-h6">Обновление QSP (5.7.0) и QGen (4.0.0b)</h6><blockquote class="avs-article-blockquote">
+<p class="avs-article-p">
+Эта статья устарела</p>
+</blockquote>
+<p class="avs-article-p">
 У нас много новостей.
 </p>
 <p class="avs-article-p">
