--- a/informarch/polka_igr_0007.html
+++ b/informarch/polka_igr_0007.html
@@ -15,7 +15,11 @@
             <h1 class="avs-article-h1">ИнформАрхив QSP</h1>
             <!-- body start -->
 <div class="avs-pages-button__wrapper"><div class="avs-pages-button__left-combine"><div class="avs-pages-button"><a href="https://aleksversus.github.io/howdo_faq/informarch/analizator_koda_qsp_0006.html" class="avs-pages-button__link">&lt; Назад, к странице 7</a></div></div><div class="avs-pages-button__right-combine"><div class="avs-pages-button"><a href="https://aleksversus.github.io/howdo_faq/informarch/rasprostranjaemaja_standalon_sborka_na_klassike_0031.html" class="avs-pages-button__link">Вперёд, к странице 9 &gt;</a></div></div></div>
-<h5 id="informarch_gameshelf" class="avs-article-h5">Полка игр</h5><h5 id="informarch_gameshelf_todo" class="avs-article-h5">Что должно быть реализовано в полке игр</h5><p class="avs-article-p">
+<h5 id="informarch_gameshelf" class="avs-article-h5">Полка игр</h5><h5 id="informarch_gameshelf_todo" class="avs-article-h5">Что должно быть реализовано в полке игр</h5><blockquote class="avs-article-blockquote">
+<p class="avs-article-p">
+Эта статья устарела. Новый плеер c полкой игр - <a href="https://github.com/QSPFoundation/qspider/releases" style="text-decoration:none;" class="avs-page-external-link">qSpider</a></p>
+</blockquote>
+<p class="avs-article-p">
 Обсуждали недавно с elmortem, каким бы хотелось видеть Classic-плеер в плане работы с играми. Вот к чему пришли.
 </p>
 <p class="avs-article-p">
