--- a/informarch/proverka_pleera_0037.html
+++ b/informarch/proverka_pleera_0037.html
@@ -15,7 +15,11 @@
             <h1 class="avs-article-h1">ИнформАрхив QSP</h1>
             <!-- body start -->
 <div class="avs-pages-button__wrapper"><div class="avs-pages-button__left-combine"><div class="avs-pages-button"><a href="https://aleksversus.github.io/howdo_faq/informarch/nastrojka_shablona_0036.html" class="avs-pages-button__link">&lt; Назад, к странице 29</a></div></div><div class="avs-pages-button__right-combine"><div class="avs-pages-button"><a href="https://aleksversus.github.io/howdo_faq/informarch/video_0038.html" class="avs-pages-button__link">Вперёд, к странице 31 &gt;</a></div></div></div>
-<h6 id="faq_22_06" class="avs-article-h6">22.6. Как узнать, на каком плеере запущена игра: на классическом QSP, или на Quest Navigator?</h6><p class="avs-article-p">
+<h6 id="faq_22_06" class="avs-article-h6">22.6. Как узнать, на каком плеере запущена игра: на классическом QSP, или на Quest Navigator?</h6><blockquote class="avs-article-blockquote">
+<p class="avs-article-p">
+Эта статья устарела. Новый плеер с поддержкой HTML - <a href="https://aleksversus.github.io/howdo_faq/articles/qspider_0004.html" style="text-decoration:none;" class="avs-page-external-link">qSpider</a></p>
+</blockquote>
+<p class="avs-article-p">
 В: Как узнать, на каком плеере запущена игра: на классическом QSP, или на Quest Navigator?
 </p>
 <p class="avs-article-p">
