--- a/informarch/shablony_oformlenija_dlja_igr_0032.html
+++ b/informarch/shablony_oformlenija_dlja_igr_0032.html
@@ -15,7 +15,11 @@
             <h1 class="avs-article-h1">ИнформАрхив QSP</h1>
             <!-- body start -->
 <div class="avs-pages-button__wrapper"><div class="avs-pages-button__left-combine"><div class="avs-pages-button"><a href="https://aleksversus.github.io/howdo_faq/informarch/tjanem_karty_iz_kollody_0022.html" class="avs-pages-button__link">&lt; Назад, к странице 24</a></div></div><div class="avs-pages-button__right-combine"><div class="avs-pages-button"><a href="https://aleksversus.github.io/howdo_faq/informarch/kak_podkljuchit__svoj_shrift_0033.html" class="avs-pages-button__link">Вперёд, к странице 26 &gt;</a></div></div></div>
-<h5 id="faq_22_01" class="avs-article-h5">22.1. Пишу несколько игр в Quest Navigator. Как сделать, чтобы у каждой игры было собственное оформление?</h5><p class="avs-article-p">
+<h5 id="faq_22_01" class="avs-article-h5">22.1. Пишу несколько игр в Quest Navigator. Как сделать, чтобы у каждой игры было собственное оформление?</h5><blockquote class="avs-article-blockquote">
+<p class="avs-article-p">
+Эта статья устарела. Новый плеер с поддержкой HTML - <a href="https://aleksversus.github.io/howdo_faq/articles/qspider_0004.html" style="text-decoration:none;" class="avs-page-external-link">qSpider</a></p>
+</blockquote>
+<p class="avs-article-p">
 В: Пишу несколько игр в Quest Navigator. Как сделать, чтобы у каждой игры было собственное оформление?
 </p>
 <p class="avs-article-p">
