--- a/informarch/video_0038.html
+++ b/informarch/video_0038.html
@@ -15,7 +15,11 @@
             <h1 class="avs-article-h1">ИнформАрхив QSP</h1>
             <!-- body start -->
 <div class="avs-pages-button__wrapper"><div class="avs-pages-button__left-combine"><div class="avs-pages-button"><a href="https://aleksversus.github.io/howdo_faq/informarch/proverka_pleera_0037.html" class="avs-pages-button__link">&lt; Назад, к странице 30</a></div></div><div class="avs-pages-button__right-combine"><div class="avs-pages-button"><a href="https://aleksversus.github.io/howdo_faq/informarch/standalone_0039.html" class="avs-pages-button__link">Вперёд, к странице 32 &gt;</a></div></div></div>
-<h6 id="faq_22_07" class="avs-article-h6">22.7. Как вставить видео в игру на Навигаторе?</h6><p class="avs-article-p">
+<h6 id="faq_22_07" class="avs-article-h6">22.7. Как вставить видео в игру на Навигаторе?</h6><blockquote class="avs-article-blockquote">
+<p class="avs-article-p">
+Эта статья устарела. Новый плеер с поддержкой HTML - <a href="https://aleksversus.github.io/howdo_faq/articles/qspider_0004.html" style="text-decoration:none;" class="avs-page-external-link">qSpider</a></p>
+</blockquote>
+<p class="avs-article-p">
 В: Как вставить видео в игру на Навигаторе?
 </p>
 <p class="avs-article-p">
