--- a/informarch/vypolnenie_js_iz_qsp-koda_0041.html
+++ b/informarch/vypolnenie_js_iz_qsp-koda_0041.html
@@ -15,7 +15,11 @@
             <h1 class="avs-article-h1">ИнформАрхив QSP</h1>
             <!-- body start -->
 <div class="avs-pages-button__wrapper"><div class="avs-pages-button__left-combine"><div class="avs-pages-button"><a href="https://aleksversus.github.io/howdo_faq/informarch/razmer_okna_igry_0040.html" class="avs-pages-button__link">&lt; Назад, к странице 33</a></div></div><div class="avs-pages-button__right-combine"><div class="avs-pages-button"><a href="https://aleksversus.github.io/howdo_faq/informarch/instruktsija_po_smene_oformlenija_iz_koda_igry_0042.html" class="avs-pages-button__link">Вперёд, к странице 35 &gt;</a></div></div></div>
-<h6 id="faq_22_10" class="avs-article-h6">22.10. Как выполнить JavaScript прямо из кода QSP?</h6><p class="avs-article-p">
+<h6 id="faq_22_10" class="avs-article-h6">22.10. Как выполнить JavaScript прямо из кода QSP?</h6><blockquote class="avs-article-blockquote">
+<p class="avs-article-p">
+Эта статья устарела. Новый плеер с поддержкой HTML - <a href="https://aleksversus.github.io/howdo_faq/articles/qspider_0004.html" style="text-decoration:none;" class="avs-page-external-link">qSpider</a></p>
+</blockquote>
+<p class="avs-article-p">
 В: Как выполнить JavaScript прямо из кода QSP?
 </p>
 <p class="avs-article-p">
