--- a/index.html
+++ b/index.html
@@ -128,5 +128,37 @@
     </div>
 </div>
 <script type="text/javascript" src="res/js/text_replace.js"></script>
+<style>
+    .warn-wrapper {
+        position: fixed;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        background: rgba(0, 0, 0, 0.8);
+    }
+    .warn-message {
+        max-width:90%;
+        max-height: 90%;
+        padding: 1em;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        border: 2px solid #edefd4;
+        border-radius: 0.25em;
+        background: rgba(0, 0, 0, 0.95);
+    }
+    .warn-message-text {
+        font-size: xx-large;
+        color: #ff0000;
+    }
+</style>
+<div class="warn-wrapper">
+    <div class="warn-message"><span class="warn-message-text">ВНИМАНИЕ!!!</span><span class="warn-message-text">Я вновь обновляю проект! Пока ничего не работает, можете искать статьи в исходниках.</span></div>
+</div>
 </body>
 </html>
